--- a/Mogo/index.html
+++ b/Mogo/index.html
@@ -10,10 +10,10 @@
 <body>
 	<div class="qw">
 		<center><img src="Foto/picture.png"></center>
-		<a href="Contact.html" class="but1" target="_blank"><b>CONTACT</b></a>
-		<a href="Blog.html" class="but" target="_blank"><b>BLOG</b></a>
-		<a href="Work.html" class="but2" target="_blank"><b>WORK</b></a>
-		<a href="Service.html" class="but3" target="_blank"><b>SERVICE</b></a>
+		<a href="Contact" class="but1" target="_blank"><b>CONTACT</b></a>
+		<a href="Blog" class="but" target="_blank"><b>BLOG</b></a>
+		<a href="Work" class="but2" target="_blank"><b>WORK</b></a>
+		<a href="Service" class="but3" target="_blank"><b>SERVICE</b></a>
 		<a class="but4"><b>ABOUT</b></a>
 		<div id="mogo"><b>MoGo</b></div>
 		<div class="q">
