--- a/Mogo/Blog.html
+++ b/Mogo/Blog.html
@@ -16,7 +16,7 @@
 	</div>
 	
 	<div>
-		<img src="Foto/ofice.psd.png" id="ofice"/>
+		<img src="ofice.psd.png" id="ofice"/>
 	</div>
 	<div id="blue"><b>15</b><br/><div id="qq"><em>jan</em></div></div>
 	<div id="a">
@@ -31,9 +31,9 @@
                consequat.        </p>
 	</pre>
 		<div id="qwa"></div>
-	<img src="Foto/like.jpg" id="like"/>
+	<img src="like.jpg" id="like"/>
 	<div id="likes">209</div>
-	<img src="Foto/q.jpg" id="qa"/>
+	<img src="q.jpg" id="qa"/>
 	<div id="wievs">723</div>
 
 
