--- a/Mogo/Blog.html
+++ b/Mogo/Blog.html
@@ -39,7 +39,7 @@
 
     	
     <div id="blueу"><b>14</b><br/><div id="qq"><em>jan</em></div></div>
-	<img src="Foto/pla.png" id="pla"/>
+	<img src="pla.png" id="pla"/>
 		<div id="aa">
 <b>LOREM IPSUM DOLOR SIT AMET</b>
 	</div>
@@ -52,13 +52,13 @@
                consequat.        <br/>
         </div>
     <div id="qwaa"></div>
-    <img src="Foto/like.jpg" id="lik"/>
+    <img src="like.jpg" id="lik"/>
 	<div id="liks">423</div>
-	<img src="Foto/q.jpg" id="qaa"/>
+	<img src="q.jpg" id="qaa"/>
 	<div id="wievss">903</div>
 
 	    <div id="bluer"><b>13</b><br/><div id="qq"><em>jan</em></div></div>
-	<img src="Foto/карт.png" id="plar"/>
+	<img src="карт.png" id="plar"/>
 		<div id="aar">
 <b>LOREM IPSUM DOLOR SIT AMET</b>
 	</div>
@@ -71,9 +71,9 @@
                consequat.        <br/>
         </div>
     <div id="qwaar"></div>
-    <img src="Foto/like.jpg" id="rr"/>
+    <img src="like.jpg" id="rr"/>
 	<div id="liksr">134</div>
-	<img src="Foto/q.jpg" id="qaar"/>
+	<img src="q.jpg" id="qaar"/>
 	<div id="wievssr">324</div>
 
 
