--- a/Mogo/Contact.html
+++ b/Mogo/Contact.html
@@ -25,12 +25,12 @@
 <em id="em">Jan 9,2016</em>
 
 
-<img src="Foto/q.png" id="ff"/>
+<img src="q.png" id="ff"/>
 <div id="ll">CONSECTETUR ADIPICKING ELIT.<br>SED DO EIUSMOD TEMPOR</div>
 <em id="emm">Jan 8,2016</em>
 
 
-<img src="Foto/t.png" id="fff"/>
+<img src="t.png" id="fff"/>
 <div id="lll">SED DO EIUSMOD TEMPOR<br>INCIDIDUNT UT LABORE</div>
 <em id="emmm">Jan 7,2016</em>
 
